website/versioned_docs/version-0.3.1-beta/development/headless-styles/Select.mdx
---
tags: [Development, Packages, Components, Headless Styles, Select]
---

<!-- TODO: As of 2.0.0-beta.17 live-codeblock do not support imports. -->
<!-- Keep an eye out so we can kill the components we are importing in. -->
<!-- https://docusaurus.io/docs/markdown-features/code-blocks#imports -->

import CodeBlock from '@theme/CodeBlock'
import BasicSelect from '@site/src/components/Select/BasicSelect'
import {
  BasicSelectPreview,
  BasicSelectFullPreview,
} from '@site/src/components/Select/BasicSelect.preview'
import SelectSizes from '@site/src/components/Select/SelectSizes'
import {
  SelectSizesPreview,
  SelectSizesFullPreview,
} from '@site/src/components/Select/SelectSizes.preview'
import InvalidSelect from '@site/src/components/Select/InvalidSelect'
import DisabledSelect from '@site/src/components/Select/DisabledSelect'
import ViewSourceLink from '@site/src/components/ViewSourceLink/ViewSourceLink'
import LiveExampleTabs from '@site/src/components/LiveExampleTabs/LiveExampleTabs'

The `getSelectProps` helper is used to allow the user to select from one of a list of options.

:::note

`getSelectProps` does not support the `multiple` attribute; it is only for a single selection.

:::

<ViewSourceLink
  icon="github"
  href="https://github.com/pluralsight/pando/tree/main/packages/headless-styles/src/components/Select"
>
  View source
</ViewSourceLink>

## Import

```javascript
import { getSelectProps } from '@pluralsight/headless-styles'
```

## Usage

### Basic Select

<BasicSelect />
<LiveExampleTabs
  fullCode={<BasicSelectFullPreview />}
  sandboxList={{
    chakra: 'basic-select-react-chakra-nx4rmy',
    joy: 'basic-select-mui-tq9ng3',
    styled: 'basic-select-sc-nn50sr',
    svelte: 'basic-select-svelte-lkonid',
  }}
>
  <BasicSelectPreview />
</LiveExampleTabs>

### Sizes

The `getSelectProps` helper comes with two sizes: `m` and `l` (default).

<SelectSizes />
<LiveExampleTabs
  fullCode={<SelectSizesFullPreview />}
  sandboxList={{
    chakra: 'basic-select-react-chakra-nx4rmy',
    joy: 'basic-select-mui-tq9ng3',
    styled: 'basic-select-sc-nn50sr',
    svelte: 'basic-select-svelte-lkonid',
  }}
>
  <SelectSizesPreview />
</LiveExampleTabs>

### Invalid

A Select should only ever be `invalid` when it is required and an empty "placeholder" option is selected.

<InvalidSelect />

```javascript
getSelectProps({
  //highlight-next-line
  id: 'invalid-select',
  invalid: true,
  name: 'invalid-select',
  required: true,
  value: '',
})
```

:::tip

Since `select` does not have a placeholder, you can approximate this with some HTML attributes on the `option` element.

```html
<select>
  <option hidden disabled selected value="">-- select an option --</option>
  <option>Option 1</option>
  <option>Option 2</option>
  <option>Option 3</option>
</select>
```

:::

### Disabled

When a Select may not currently be interacted with (but may be after some other interaction), and its value is not used, it can be marked as `disabled`
If the Select cannot be interacted with, it should be omitted instead.

<DisabledSelect />

```javascript
getSelectProps({
  //highlight-next-line
  disabled: true
  id: 'invalid-select',
  name: 'invalid-select',
  value: '',
})
```

### Read-Only

The `select` element does not support the `readonly` attribute. In the case where you need a Select to be read-only, it is best to adjust the options to either disable all but the selected one, or (better yet) remove all other options.

```html
<select>
  <option value="unused-1" disabled>Non-selected value</option>
  <option value="readOnly">The read-only value</option>
  <option value="unused-2" disabled>Non-selected value</option>
</select>
```

```html
<select>
  <option value="readOnly">The read-only value</option>
</select>
```

### Grouped options

The `optgroup` element can be used to group and label related options when more organization is needed.

```html
<select>
  <optgroup label="Fruits">
    <option>Apricot</option>
    <option>Banana</option>
    <option>Cantaloupe</option>
  </optgroup>

  <optgroup label="Vegetables">
    <option>Artichoke</option>
    <option>Brussels Sprouts</option>
    <option>Cabbage</option>
  </optgroup>
</select>
```

## Accessibility and messages

When displaying [Error Messages](./FormControl.mdx#error-messasge) or [Help Text](./FormControl.mdx#help-text) it is required to pass the `options.id` value to the `SelectOptions.describedBy` field. This will add an [aria-describedby](https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-describedby) attribute to the `select` which establishes a relationship between the `select` and message you are displaying.

:::danger

Not providing a `describedBy` option that matches the Error/Field Message `id` will result in a poor accessbility experience. Please make sure you are using both of these in order to provide the best experience to all of your users.

:::

### Using both error & field messages

When using both the field message and error message API, pass a comma-separated String to the `SelectOptions.describedBy` option.

```javascript title="Example using both messages for a select"
const { value: helpText, ...message } = getFieldMessageProps({
  id: 'subscriptionPlan:help',
  message: 'Subscriptions may be changed or cancelled at any time.',
})
const error = getErrorMessageProps({
  id: 'subscriptionPlan:error',
  invalid,
  message: 'A selection is required.',
})
const selectProps = getSelectProps({
  ...fieldOptions,
  // highlight-next-line
  describedBy: `${message.id},${error.container.id}`,
  id: 'subscriptionPlan',
  name: 'subscriptionPlan',
  value,
})
```

## API

| Name               | Argument Type                                | Default         | Description                      |
| ------------------ | -------------------------------------------- | --------------- | -------------------------------- |
| `getSelectProps`   | **options**: [SelectOptions](#selectoptions) | **size**: 'l'   | Get select styles for CSS usage. |
| `getJSSelectProps` | **options**: [SelectOptions](#selectoptions) | same as CSS API | CSS-in-JS API                    |

## Options

### SelectOptions

This interface is available as an `import` for use.

```typescript
interface SelectOptions extends FieldOptions {
  describedBy?: string
  size?: 'm' | 'l'
  tech?: 'svelte'
  value?: string
}
```

```typescript title="Import example"
import type { SelectOptions } from '@pluralsight/headless-styles/types'
```

### FieldOptions

```typescript
interface FieldOptions {
  disabled?: boolean
  id: string
  invalid?: boolean
  name: string
  readOnly?: boolean
  required?: boolean
}
```

## Props

### SelectProps

```typescript
interface SelectProps {
  iconOptions: {
    ariaHidden: true
    ariaLabel: string
    size: 'm'
    tech: 'svelte' | ''
  }
  iconWrapper: {
    className: string
  }
  fieldWrapper: {
    className: string
  }
  select: {
    'aria-invalid': boolean
    'data-disabled': boolean
    'data-invalid': boolean
    'data-readonly': boolean
    'data-required': boolean
    'aria-describedBy'?: string
    className: string
    disabled: boolean
    id: string
    name: string
    required: boolean
    value: string
  }
  selectWrapper: {
    className: string
  }
}
```

### JSSelectProps

```typescript
interface JSSelectProps {
  iconOptions: {
    ariaHidden: true
    ariaLabel: string
    size: 'm'
    tech: 'svelte' | ''
  }
  iconWrapper: {
    styles: Record<string, unknown>
    cssProps: TemplateLiteralString
  }
  fieldWrapper: {
    styles: Record<string, unknown>
    cssProps: TemplateLiteralString
  }
  select: {
    a11yProps: {
      'aria-invalid': boolean
      'data-disabled': boolean
      'data-invalid': boolean
      'data-readonly': boolean
      'data-required': boolean
      'aria-describedBy'?: string
      disabled: boolean
      id: string
      name: string
      required: boolean
      value: string
    }
    styles: Record<string, unknown>
    cssProps: TemplateLiteralString
  }
  selectWrapper: {
    styles: Record<string, unknown>
    cssProps: TemplateLiteralString
  }
}
```
